Add cachebusting to style.css reference in HTML

--- a/public/test/article.html
+++ b/public/test/article.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport"/>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css?v=1" rel="stylesheet">
     <title>clarat.org - Einzelansicht </title>
 </head>
 <body data-section="family">
@@ -297,7 +297,7 @@
             <h3 class="article__headline article__headline--h3" id="sprung6">Therapie</h3>
 
             <p>Manchmal reicht eine Beratung alleine nicht aus. Dann kann eine Therapie helfen.
-            Um herauszufinden, ob eine therapeutische Behandlung notwendig ist oder welche Art von Therapie geeignet ist, sollten Eltern einen Arzt für Kinder- und Jugendpsychiatrie, einen Kinder- und Jugendpsychiater oder eine Kinder- und Jugendpsychologen aufsuchen. Eine erste Anlaufstelle kann auch der Hausarzt sein. Er kann sich ein Bild von der Problematik machen. Wenn notwendig, kann er an einen geeigneten Spezialisten überweisen. Die Art der Therapie richtet sich nach der Ursache der Verhaltensauffälligkeiten. Daher ist der erste Schritt, die Ursache für die Verhaltensauffälligkeit herauszufinden. 
+            Um herauszufinden, ob eine therapeutische Behandlung notwendig ist oder welche Art von Therapie geeignet ist, sollten Eltern einen Arzt für Kinder- und Jugendpsychiatrie, einen Kinder- und Jugendpsychiater oder eine Kinder- und Jugendpsychologen aufsuchen. Eine erste Anlaufstelle kann auch der Hausarzt sein. Er kann sich ein Bild von der Problematik machen. Wenn notwendig, kann er an einen geeigneten Spezialisten überweisen. Die Art der Therapie richtet sich nach der Ursache der Verhaltensauffälligkeiten. Daher ist der erste Schritt, die Ursache für die Verhaltensauffälligkeit herauszufinden.
             </p>
 
             <h4 class="article__headline article__headline--h4">Ergotherapie</h4>
