--- a/public/test/start.html
+++ b/public/test/start.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css?v=1" rel="stylesheet">
     <title>clarat.org </title>
 </head>
 <body>
