Proposal for a "inter page" between start and article.html

--- a/public/test/start.html
+++ b/public/test/start.html
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <form action="article.html" method="get" class="form">
+    <form action="results.html" method="get" class="form">
         <input type="text" class="form__input" list="suggestions" placeholder="Deine Suchbegriffe…"/>
         <button type="submit" class="form__submit">Suche starten</button>
     </form>
@@ -97,16 +97,16 @@
     <div class="tags">
         <h2 class="tags__headline">Wonach suchen andere?</h2>
         <ul class="tags__tags">
-            <li><a href="article.html">Depression</a></li>
-            <li><a href="article.html">Kindergeld</a></li>
-            <li><a href="article.html">Sucht</a></li>
-            <li><a href="article.html">ADHS</a></li>
-            <li><a href="article.html">Jugendamt</a></li>
-            <li><a href="article.html">Aggression</a></li>
-            <li><a href="article.html">Pubertät</a></li>
-            <li><a href="article.html">Alleinerziehend</a></li>
-            <li><a href="article.html">Trauma</a></li>
-            <li><a href="article.html">Autismus</a></li>
+            <li><a href="results.html">Depression</a></li>
+            <li><a href="results.html">Kindergeld</a></li>
+            <li><a href="results.html">Sucht</a></li>
+            <li><a href="results.html">ADHS</a></li>
+            <li><a href="results.html">Jugendamt</a></li>
+            <li><a href="results.html">Aggression</a></li>
+            <li><a href="results.html">Pubertät</a></li>
+            <li><a href="results.html">Alleinerziehend</a></li>
+            <li><a href="results.html">Trauma</a></li>
+            <li><a href="results.html">Autismus</a></li>
         </ul>
     </div>
 
