--- a/public/test/results.html
+++ b/public/test/results.html
@@ -268,6 +268,7 @@
 
   </div>
 </div>
-
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
