--- a/public/test/start.html
+++ b/public/test/start.html
@@ -116,6 +116,7 @@
 
 
 </div>
-
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
