--- a/public/test/ar-ticle.html
+++ b/public/test/ar-ticle.html
@@ -142,8 +142,14 @@
 <a href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D=%D8%A7%D8%B3%D8%AA%D8%B4%D8%A7%D8%B1%D8%A9%20%D9%84%D9%84%D8%A8%D8%AD%D8%AB%20%D8%B9%D9%86%20%D8%B9%D9%85%D9%84&search_form%5Bgenerated_geolocation%5D=52.5151098%2C13.3903492&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">قم بإيجاد الاستشارة في جوارك</a>
 
 <p><a href="#sprung0">إلى الأعلى ▲</a></p>
-             <h2 class="article__headline article__headline--h2" id="sprung2">كم يجب علي أن أكون جيداً في تحدث اللغة الألمانية، وذلك لكي أتمكن من العمل؟
+
+          <div class="accordion" >
+            <button type="button" class="accordion__trigger accordion__toggle">
+
+          <h2 class="article__headline article__headline--h2" id="sprung2">كم يجب علي أن أكون جيداً في تحدث اللغة الألمانية، وذلك لكي أتمكن من العمل؟
 </h2>
+            </button>
+            <div class="accordion__content">
 
           <p>هذا ما يمكنه أن يكون متفاوتاً جداً. يتم التحدث باللغة الألمانية في كثير من الشركات في ألمانيا. <strong>ولكن كم يجب أن تكون متحدثاُ جديداً بالألمانية، هذا ما تمليه على الشخص فرصة العمل التي يقدم عليها.</strong>
 يوجد بعض فرص العمل التي توجب عليك من أجلها التحدث باللغة الألمانية بشكل جيد. فمثلاً عندما يتوجب عليك أن تكون باتصال مع الزبائن. في حالة بعض الوظائف فإنك تحتاج لبعض المفردات الخاصة في اللغة الألمانية؛ على سبيل المثال الطبيب.
@@ -160,6 +166,11 @@
 يوجد أيضاً الكثير من <a href="https://plus.clarat.org/ar/wissen/deutsch-lernen/">الإمكانات تشرح لك كيفية تحسين لغتك الألمانية.</a> وأيضاً الكثير من الناس الذين يمكنهم مساعدة في ذلك بكل سرور. حتى إذا كان من غير الممكن لك الذهاب لكورس الاندماج أو كورس اللغة المهني.
 </p>
 
+            </div>
+
+            <button type="button" class="accordion__readmore accordion__toggle"> إقرأ المزيد...
+              <i class="fa fa-chevron-down" aria-hidden="true"></i> </button>
+          </div>
              <p><a href="#sprung0">إلى الأعلى ▲</a></p>
 
              <h2 class="article__headline article__headline--h2" id="sprung3">ما هي الإمكانات التي لدي في ألمانيا للعمل؟</h2>
